Fix collapsed navbar + Name on jumbotron

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -91,3 +91,55 @@ nav a:nth-child(3):focus~.animation {
 #jumbo-shadow {
     box-shadow: 2px 2px 4px 0px rgb(0 0 0 / 25%);
 }
+
+.jumbotron .container {
+    position: relative;
+}
+
+.jumbotron .container h1 {
+    position: absolute;
+    bottom: -275px;
+    margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    right: 0;
+    text-align: center;
+    font-family: 'Krona One', sans-serif;
+    font-size: 75px;
+    -webkit-text-stroke: 1px #f1f3f4;
+    text-shadow: 0px 10px 5px #434343;
+    background: -webkit-linear-gradient(#ff9900, #434343);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+/************************************/
+@media (max-width: 992px) {
+    nav .animation {
+        display: none;
+    }
+
+    nav .navbar-nav {
+        text-align: right;
+    }
+
+    .navbar .active{
+        color: #ff9900;
+        text-decoration: underline;
+    }
+
+    .navbar .active:hover {
+        color: #ff9900;
+        text-decoration: underline;
+    }
+
+    .navbar .active:focus {
+        color: #ff9900;
+        text-decoration: underline;
+    }
+
+    .navbar a:hover {
+        color: #ff9900;
+        text-decoration: none;
+    }
+}
